language_tests/source_files/invalid/use_after_move_function_call.tr
// Test: Use After Move in Function Call
// The value is moved when passed to a function, then used again.

struct NoCopy {
    value: int32
}

func consume(n: NoCopy) {
    std.print("Consumed\n")
}

func main() {
    let x = NoCopy { value: 42 }
    consume(n: x)  // move, x is now invalid
    consume(n: x)  // ERROR: use of moved value 'x'
}
